#1380 Fix accessibility issues with zoom and text overlap (#1533)
* Fix zoom issues

* Fix class name mistake

--- a/src/themes/website/styles/forms.scss
+++ b/src/themes/website/styles/forms.scss
@@ -235,12 +235,12 @@ $search-button-width: 30px;
     tag-input {
         display: block;
         margin: 5px 0;
-        width: 300px;
+        max-width: 300px;
     }
 
     .input-group:first-child {
         border-bottom: 1px solid #a19f9d;
-        width: 300px;
+        max-width: 300px;
         flex: 1;
     }
 
